libmpdclient 2.18 (not yet released)
* more out-of-memory checks
* partition: add mpd_recv_partition()
* support MPD protocol 0.21
 - "oneshot" single state
* support MPD protocol 0.22
 - status: add mpd_status_get_partition()

libmpdclient 2.17 (2019/12/04)
* search: add mpd_search_add_db_songs_to_playlist()
* idle: support event "partition"
* support MPD protocol 0.19
  - "listneighbors"
* support MPD protocol 0.22
  - "getfingerprint"
* support tags "MPD_TAG_LABEL", "MPD_TAG_MUSICBRAINZ_WORKID", "Grouping",
  "Work", "Conductor"
* support MPD partitions
* mpd_async_set_keepalive() returns bool
* mpd_connection_set_keepalive() returns bool
* fix build failure on Haiku

libmpdclient 2.16 (2018/10/09)
* support MPD protocol 0.19
  - "mount", "unmount", "listmounts"
* support MPD protocol 0.17
  - "load" with range
* add mpd_output_get_attribute()
* use UINX_MAX instead of `(unsigned)-1` to avoid undefined behavior

libmpdclient 2.15 (2018/09/02)
* support MPD protocol 0.21
  - search: support search expressions
  - search: descending sort
  - search: support sorting by "Last-Modified"
  - song: audio format
* support MPD protocol 0.17
  - player: command "seekcur"
* fix `-Wrestrict` compiler warning

libmpdclient 2.14 (2018/02/11)
* support MPD protocol 0.21
  - command "outputset"
  - mpd_output_get_plugin()
  - receive output attributes
* MSVC compatibility
* improved local and abstract socket support

libmpdclient 2.13 (2017/07/25)
* fix build with meson > 0.38.1
* fix connect error "Operation now in progress"

libmpdclient 2.12 (2017/07/21)
* support MPD protocol 0.21
  - support tag "OriginalDate"
  - command "tagtypes" plus "disable", "enable", "clear"
* support MPD protocol 0.20
  - support "plchanges" and "plchangesposid" with range
* support MPD protocol 0.19
  - commands "addtagid", "cleartagid"
  - command "listfiles"
  - grouping for "list" and "count"
  - tag "AlbumSort"
  - "seekid" with float time