@@ -5,6 +5,7 @@ libmpdclient 2.18 (not yet released)
  - "oneshot" single state
 * support MPD protocol 0.22
  - status: add mpd_status_get_partition()
+ - command "moveoutput"
 
 libmpdclient 2.17 (2019/12/04)
 * search: add mpd_search_add_db_songs_to_playlist()
